--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "postcss-easy-import": "3.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "swr": "^1.0.1",
     "tailwindcss": "^2.2.8"
   },
   "license": "ISC",
